--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.php -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +9,7 @@
 <body>
     <header>
         <h1>Welcome to MWEIGA HIGH SCHOOL SRMS</h1>
-        <!-- Links to various sections -->
+        <!-- Links to the various sections -->
         <nav>
             <ul>
                 <li><a href="student_login.php">Student Login</a></li>
